--- a/a-la-française.html
+++ b/a-la-française.html
@@ -1,187 +1,213 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./public/css/style.css">
-  <meta name ="robots" content ="index,follow">
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-  <!-- Icon -->
-  <script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
-  <link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
- 
-  <title>Menu - A la française</title>
-</head>
-<body>
-    <header class="header">
-        <a class="back" href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
-    </header>
-
-    <main>
-        <div class="img">
-            <img class="img__image" src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"/>
-        </div>
-        <div class="menu__container">
-            <div class="menu__header">
-                <h1 class="menu__title">A la française</h1>
-                <div class="heart">
-                    <i class="far fa-heart"></i>
-                    <i class="fa fa-heart"></i>
-                </div>
-            </div>
-                     <!-- Menu -->
-            <div class="submenus">
-                <!-- Entrées -->
-                <section class="submenu">
-                    <h2 class="submenu__title">ENTREES</h2>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Tartare de poulpe acidulé</h3>
-                            <p>Aux zestes d'orange</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>25€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Velouté de légumes d'antan</h3>
-                            <p>Carotte, panais, topinambour</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>35€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Soupe à l'oignon</h3>
-                            <p>Revisitée</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>20€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                </section>
-                        <!-- Plats -->
-                <section class="submenu">
-                    <h2 class="submenu__title">PLATS</h2>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Coquilles Saint-Jacques</h3>
-                            <p>Accompagnées d'une purée de panais</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>40€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Magret de canard</h3>
-                            <p>Et parmentier de pommes de terre</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>35€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                            <p>Sur son lit de gnocchis aux légumes</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>44€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                </section>
-                    <!-- Desserts -->
-                <section class="submenu">
-                        <h2 class="submenu__title">DESSERTS</h2>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Pétales de violettes glacés</h3>
-                            <p>Et purée de noisettes</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>18€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Fondant au chocolat</h3>
-                            <p>Revisité</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>22€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Millefeuille croustillant</h3>
-                            <p>Myrtilles et pâte d’amande</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>23€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                </section>
-                </div>
-                <div class="wrap__btn">
-                    <button class="pink__btn" id="command__btn">Commander</button>
-                </div>
-            <footer>
-                <div class="footer__container">
-                    <h4 class="footer__logo">ohmyfood</h4>
-                        <ul class="footer__list">
-                            <li class="footer__lists">
-                                <a href="#">
-                                    <i class="fa-solid fa-utensils"></i>Proposer un restaurant
-                                </a>
-                            </li>
-                            <li class="footer__lists">
-                                <a href="#">
-                                    <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire
-                                </a>
-                            </li>
-                            <li class="footer__lists">
-                                <a href="#">Mentions légales</a>
-                            </li>
-                            <li class="footer__lists">
-                                <a href="mailto:contact@ohmyfood.com">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-            </footer>
-        </div>
-    </main>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="./public/css/style.css">
+		<meta name ="robots" content ="index,follow">
+		<!-- Font -->
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+		<!-- Icon -->
+		<script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
+		<link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
+		<title>Menu - A la française</title>
+	</head>
+	<body>
+		<header class="header">
+			<a class="back" href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
+			<img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
+		</header>
+		<main>
+			<div class="img">
+				<img class="img__image" src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"/>
+			</div>
+			<div class="menu__container">
+				<div class="menu__header">
+					<h1 class="menu__title">A la française</h1>
+					<div class="heart">
+						<i class="far fa-heart"></i>
+						<i class="fa fa-heart"></i>
+					</div>
+				</div>
+				<!-- Menu -->
+				<div class="submenus">
+					<!-- Entrées -->
+					<section class="submenu">
+						<h2 class="submenu__title">ENTREES</h2>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Tartare de poulpe acidulé</h3>
+								<p>
+									Aux zestes d'orange
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									25€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Velouté de légumes d'antan</h3>
+								<p>
+									Carotte, panais, topinambour
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									35€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Soupe à l'oignon</h3>
+								<p>
+									Revisitée
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									20€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+					</section>
+					<!-- Plats -->
+					<section class="submenu">
+						<h2 class="submenu__title">PLATS</h2>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Coquilles Saint-Jacques</h3>
+								<p>
+									Accompagnées d'une purée de panais
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									40€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Magret de canard</h3>
+								<p>
+									Et parmentier de pommes de terre
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									35€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Pigeonneau d’Ille-et-Vilaine</h3>
+								<p>
+									Sur son lit de gnocchis aux légumes
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									44€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+					</section>
+					<!-- Desserts -->
+					<section class="submenu">
+						<h2 class="submenu__title">DESSERTS</h2>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Pétales de violettes glacés</h3>
+								<p>
+									Et purée de noisettes
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									18€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Fondant au chocolat</h3>
+								<p>
+									Revisité
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									22€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Millefeuille croustillant</h3>
+								<p>
+									Myrtilles et pâte d’amande
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									23€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+					</section>
+				</div>
+				<div class="wrap__btn">
+					<button class="pink__btn" id="command__btn">Commander</button>
+				</div>
+				<footer>
+					<div class="footer__container">
+						<h4 class="footer__logo">ohmyfood</h4>
+						<ul class="footer__list">
+							<li class="footer__lists">
+								<a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+							</li>
+							<li class="footer__lists">
+								<a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
+							</li>
+							<li class="footer__lists"><a href="#">Mentions légales</a></li>
+							<li class="footer__lists"><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+						</ul>
+					</div>
+				</footer>
+			</div>
+		</main>
+	</body>
 </html>
