--- a/index.html
+++ b/index.html
@@ -1,148 +1,145 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <!-- Balise meta -->
-  <title>Ohmyfood</title>
-  <meta name="title" content="Ohmyfood, projet 3 OpenClassrooms ">
-  <meta name="description" content="Ohmyfood, Réservez le menu qui vous convient.
-  Découvrez des restaurants d'exception, sélectionnés par nos soins.
-  Projet 3 OpenClassrooms réalisé par Samantha Morata.">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <!-- Icon -->
-    <script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
-    
-    <link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
-   <link rel="stylesheet" href="./public/css/style.css">
-</head>
-<body>
-  <!-- Loading -->
-  <div class="container">
-    <div class="load">
-      <div class="load__bar load__bar--1"></div>
-      <div class="load__bar load__bar--2"></div>
-      <div class="load__bar load__bar--3"></div>
-      <div class="load__bar load__bar--4"></div>
-      <div class="load__bar load__bar--5"></div>
-    </div>
-  </div>
-    <!-- Header -->
-    <header>
-      <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
-    </header>
-    <main>
-      <div class="local">
-        <i class="fa fa-map-marker-alt"></i>
-        <span class="local__text">Paris, Belleville</span>
-      </div>
-        <!-- Reservation -->
-         <section class="reser">
-        <h1 class="reser__title">Réservez le menu qui
-           vous convient</h1>
-        <p class="reser__subtitle">Découvrez des restaurants d'exception,
-          sélectionnés par nos soins.</p>
-        <a class="pink__btn" href="#restaurants">Explorez nos restaurants</a>
-         </section>
-         <!-- Fonctionnement -->
-         <section class="fonc">
-          <div class="fonc__container">
-            <h2>Fonctionnement</h2>
-            <ol class="fonc__list">
-                <li class="fonc__lists" id="1"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li>
-                <li class="fonc__lists" id="2"><i class="fa-solid fa-list"></i>Composez votre menu</li>
-                <li class="fonc__lists" id="3"><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
-            </ol>
-          </div>
-         </section>
-         <!-- Restaurants -->
-         <section id="restaurants">
-            <div class="restaurants__container">
-                <h2 class="restaurants__title">Restaurants</h2>
-          <div class="cards">
-            <div class="card">
-            <a href="./palette-du-gout.html">
-                <img src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt class="card__img">
-                <span class="card__btn">Nouveau</span>
-                <div class="card__content">
-                  <h3 class="card__title">La palette du goût</h3>
-                  <p class="card__loc">Ménilmontant</p>
-                <div class="heart">
-                    <i class="far fa-heart"></i>
-                    <i class="fa fa-heart"></i>
-                </div>
-                </div>
-              </a>
-            </div>
-          <div class="card">
-            <a href="./note-enchantée.html">
-                <span class="card__btn">Nouveau</span>
-                <img src="./src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt class="card__img">
-                <div class="card__content">
-                      <h3 class="card__title">La note enchantée</h3>
-                      <p class="card__loc">Charonne</p>
-                    <div class="heart">
-                        <i class="far fa-heart"></i>
-                        <i class="fa fa-heart"></i>
-                    </div>
-                </div>
-            </a>
-          </div>
-          <div class="card">
-            <a href="./a-la-française.html">
-                <img src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt class="card__img">
-                <div class="card__content">
-                      <h3 class="card__title">A la française</h3>
-                      <p class="card__loc">Cité rouge</p>
-                    <div class="heart">
-                        <i class="far fa-heart"></i>
-                        <i class="fa fa-heart"></i>
-                    </div>
-                </div>
-            </a>
-          </div>
-          <div class="card">
-            <a href="./delice-des-sens.html">
-                <img src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt class="card__img">
-                <div class="card__content">
-                      <h3 class="card__title">Le Délice des sens</h3>
-                      <p class="card__loc">Folie-Méricourt</p>
-                    <div class="heart">
-                        <i class="far fa-heart"></i>
-                        <i class="fa fa-heart"></i>
-                    </div>
-                </div>
-            </a>
-          </div>
-         </div>
-        </div>
-        </section>
-        <!-- Footer -->
-        <footer>
-          <div class="footer__container">
-              <h4 class="footer__logo">ohmyfood</h4>
-                  <ul class="footer__list">
-                      <li class="footer__lists">
-                          <a href="#">
-                              <i class="fa-solid fa-utensils"></i>Proposer un restaurant
-                          </a>
-                      </li>
-                      <li class="footer__lists">
-                          <a href="#">
-                              <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire
-                          </a>
-                      </li>
-                      <li class="footer__lists">
-                          <a href="#">Mentions légales</a>
-                      </li>
-                      <li class="footer__lists">
-                          <a href="mailto:contact@ohmyfood.com">Contact</a>
-                      </li>
-                  </ul>
-              </div>
-      </footer>
-  </main>
-</body>
+	<head>
+		<!-- Balise meta -->
+		<title>Ohmyfood</title>
+		<meta name="title" content="Ohmyfood, projet 3 OpenClassrooms ">
+		<meta name="description" content="Ohmyfood, Réservez le menu qui vous convient.  Découvrez des restaurants d'exception, sélectionnés par nos soins.  Projet 3 OpenClassrooms réalisé par Samantha Morata.">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Font -->
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+		<!-- Icon -->
+		<script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
+		<link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
+		<link rel="stylesheet" href="./public/css/style.css">
+	</head>
+	<body>
+		<!-- Loading -->
+		<div class="container">
+			<div class="load">
+				<div class="load__bar load__bar--1"></div>
+				<div class="load__bar load__bar--2"></div>
+				<div class="load__bar load__bar--3"></div>
+				<div class="load__bar load__bar--4"></div>
+				<div class="load__bar load__bar--5"></div>
+			</div>
+		</div>
+		<!-- Header -->
+		<header>
+			<img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
+		</header>
+		<main>
+			<div class="local">
+				<i class="fa fa-map-marker-alt"></i>
+				<span class="local__text">Paris, Belleville</span>
+			</div>
+			<!-- Reservation -->
+			<section class="reser">
+				<h1 class="reser__title">Réservez le menu quivous convient</h1>
+				<p class="reser__subtitle">
+					Découvrez des restaurants d'exception,sélectionnés par nos soins.
+				</p>
+				<a class="pink__btn" href="#restaurants">Explorez nos restaurants</a>
+			</section>
+			<!-- Fonctionnement -->
+			<section class="fonc">
+				<div class="fonc__container">
+					<h2>Fonctionnement</h2>
+					<ol class="fonc__list">
+						<li class="fonc__lists" id="1"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li>
+						<li class="fonc__lists" id="2"><i class="fa-solid fa-list"></i>Composez votre menu</li>
+						<li class="fonc__lists" id="3"><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
+					</ol>
+				</div>
+			</section>
+			<!-- Restaurants -->
+			<section id="restaurants">
+				<div class="restaurants__container">
+					<h2 class="restaurants__title">Restaurants</h2>
+					<div class="cards">
+						<div class="card">
+							<a href="./palette-du-gout.html">
+								<img src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt class="card__img">
+								<span class="card__btn">Nouveau</span>
+								<div class="card__content">
+									<h3 class="card__title">La palette du goût</h3>
+									<p class="card__loc">
+										Ménilmontant
+									</p>
+									<div class="heart">
+										<i class="far fa-heart"></i>
+										<i class="fa fa-heart"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="card">
+							<a href="./note-enchantée.html">
+								<span class="card__btn">Nouveau</span>
+								<img src="./src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt class="card__img">
+								<div class="card__content">
+									<h3 class="card__title">La note enchantée</h3>
+									<p class="card__loc">
+										Charonne
+									</p>
+									<div class="heart">
+										<i class="far fa-heart"></i>
+										<i class="fa fa-heart"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="card">
+							<a href="./a-la-française.html">
+								<img src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt class="card__img">
+								<div class="card__content">
+									<h3 class="card__title">A la française</h3>
+									<p class="card__loc">
+										Cité rouge
+									</p>
+									<div class="heart">
+										<i class="far fa-heart"></i>
+										<i class="fa fa-heart"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="card">
+							<a href="./delice-des-sens.html">
+								<img src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt class="card__img">
+								<div class="card__content">
+									<h3 class="card__title">Le Délice des sens</h3>
+									<p class="card__loc">
+										Folie-Méricourt
+									</p>
+									<div class="heart">
+										<i class="far fa-heart"></i>
+										<i class="fa fa-heart"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Footer -->
+			<footer>
+				<div class="footer__container">
+					<h4 class="footer__logo">ohmyfood</h4>
+					<ul class="footer__list">
+						<li class="footer__lists">
+							<a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+						</li>
+						<li class="footer__lists">
+							<a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
+						</li>
+						<li class="footer__lists"><a href="#">Mentions légales</a></li>
+						<li class="footer__lists"><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+					</ul>
+				</div>
+			</footer>
+		</main>
+	</body>
 </html>
