--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -1,187 +1,211 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./public/css/style.css">
-  <meta name ="robots" content ="index,follow">
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-  <!-- Icon -->
-  <script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
-  <link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
- 
-  <title>Menu - La palette du goût</title>
-</head>
-<body>
-    <header class="header">
-        <a class="back"  href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
-    </header>
-
-    <main>
-        <div class="img">
-            <img class="img__image" src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
-        </div>
-        <div class="menu__container">
-            <div class="menu__header">
-                <h1 class="menu__title">La palette du goût</h1>
-                <div class="heart">
-                    <i class="far fa-heart"></i>
-                    <i class="fa fa-heart"></i>
-                </div>
-            </div>
-                <!-- Menu -->
-            <div class="submenus">
-                <!-- Entrées -->
-                <section class="submenu">
-                    <h2 class="submenu__title">ENTREES</h2>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Fricassée d'escargot</h3>
-                            <p>Au piment d'Espelette</p>
-                        </div>
-                        <div class="menu__price">
-                            25€
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle" id="elem"></i>
-                        </div>
-                    </div>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <p>Et ses copeaux de truffe noire</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>35€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Oeuf au plat</h3>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>20€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                </section>
-                    <!-- Plats -->
-                <section class="submenu">
-                    <h2 class="submenu__title">PLATS</h2>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Filet de boeuf aux herbes</h3>
-                            <p>Accompagné de sa ribambelle de légumes</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>40€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Parmentier de queue de boeuf</h3>
-                            <p>À la truffe noire sur sa purée de panais</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>35€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Filet de turbot</h3>
-                            <p>Aux agrumes</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>44€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                </section>
-                        <!-- Desserts -->
-                <section class="submenu">
-                    <h2 class="submenu__title">DESSERTS</h2>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Paris-Brest</h3>
-                            <p>Revisité</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>18€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Macaron au chocolat d'exception</h3>
-                            <p>Et glace à la vanille de Madagascar</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>22€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="menu__card">
-                        <div class="menu__name">
-                            <h3>Mousse au chocolat</h3>
-                            <p>Au piment d'Espelette et à la truffe noire</p>
-                        </div>
-                        <div class="menu__price">
-                            <p>23€</p>
-                        </div>
-                        <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                </section>
-            </div>
-            <div class="wrap__btn">
-                <button class="pink__btn" id="command__btn">Commander</button>
-            </div>
-            <footer>
-                <div class="footer__container">
-                    <h4 class="footer__logo">ohmyfood</h4>
-                        <ul class="footer__list">
-                            <li class="footer__lists">
-                                <a href="#">
-                                    <i class="fa-solid fa-utensils"></i>Proposer un restaurant
-                                </a>
-                            </li>
-                            <li class="footer__lists">
-                                <a href="#">
-                                    <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire
-                                </a>
-                            </li>
-                            <li class="footer__lists">
-                                <a href="#">Mentions légales</a>
-                            </li>
-                            <li class="footer__lists">
-                                <a href="mailto:contact@ohmyfood.com">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-            </footer>
-        </div>
-    </main>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="./public/css/style.css">
+		<meta name ="robots" content ="index,follow">
+		<!-- Font -->
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+		<!-- Icon -->
+		<script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
+		<link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
+		<title>Menu - La palette du goût</title>
+	</head>
+	<body>
+		<header class="header">
+			<a class="back"  href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
+			<img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
+		</header>
+		<main>
+			<div class="img">
+				<img class="img__image" src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
+			</div>
+			<div class="menu__container">
+				<div class="menu__header">
+					<h1 class="menu__title">La palette du goût</h1>
+					<div class="heart">
+						<i class="far fa-heart"></i>
+						<i class="fa fa-heart"></i>
+					</div>
+				</div>
+				<!-- Menu -->
+				<div class="submenus">
+					<!-- Entrées -->
+					<section class="submenu">
+						<h2 class="submenu__title">ENTREES</h2>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Fricassée d'escargot</h3>
+								<p>
+									Au piment d'Espelette
+								</p>
+							</div>
+							<div class="menu__price">
+								25€
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle" id="elem"></i>
+							</div>
+						</div>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Foie gras de canard mi-cuit</h3>
+								<p>
+									Et ses copeaux de truffe noire
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									35€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Oeuf au plat</h3>
+								<p>
+									Assaisonné à la truffe sur lit de caviar
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									20€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+					</section>
+					<!-- Plats -->
+					<section class="submenu">
+						<h2 class="submenu__title">PLATS</h2>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Filet de boeuf aux herbes</h3>
+								<p>
+									Accompagné de sa ribambelle de légumes
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									40€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Parmentier de queue de boeuf</h3>
+								<p>
+									À la truffe noire sur sa purée de panais
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									35€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Filet de turbot</h3>
+								<p>
+									Aux agrumes
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									44€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+					</section>
+					<!-- Desserts -->
+					<section class="submenu">
+						<h2 class="submenu__title">DESSERTS</h2>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Paris-Brest</h3>
+								<p>
+									Revisité
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									18€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Macaron au chocolat d'exception</h3>
+								<p>
+									Et glace à la vanille de Madagascar
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									22€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Mousse au chocolat</h3>
+								<p>
+									Au piment d'Espelette et à la truffe noire
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									23€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+					</section>
+				</div>
+				<div class="wrap__btn">
+					<button class="pink__btn" id="command__btn">Commander</button>
+				</div>
+				<footer>
+					<div class="footer__container">
+						<h4 class="footer__logo">ohmyfood</h4>
+						<ul class="footer__list">
+							<li class="footer__lists">
+								<a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+							</li>
+							<li class="footer__lists">
+								<a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
+							</li>
+							<li class="footer__lists"><a href="#">Mentions légales</a></li>
+							<li class="footer__lists"><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+						</ul>
+					</div>
+				</footer>
+			</div>
+		</main>
+	</body>
 </html>
